// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`chrome — status bar + action footer review chrome renders on truecolor 1`] = `
"                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Lunch at Zomato Bangalore                                                                                          │ 
 ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  Uber ride to airport                                                                                                  
  Amazon order #12345                                                                                                   
  Netflix monthly                                                                                                       
  Salary credit October                                                                                                 
                                                                                                                        
  src llm:gpt-4   →   food  (92%)                                                                                       
                                                                                                                        
  1 food >                                                                                                              
  2 travel                                                                                                              
  3 other                                                                                                               
                                                                                                                        
  [a] accept  [r] relabel  [x] reject  [s] skip  [n] note  [Q] queues  [:] palette  [t] stats  [?] help                 
                                                                                                                        
"
`;

exports[`chrome — status bar + action footer review chrome renders on 256-color dark 1`] = `
"                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Lunch at Zomato Bangalore                                                                                          │ 
 ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  Uber ride to airport                                                                                                  
  Amazon order #12345                                                                                                   
  Netflix monthly                                                                                                       
  Salary credit October                                                                                                 
                                                                                                                        
  src llm:gpt-4   →   food  (92%)                                                                                       
                                                                                                                        
  1 food >                                                                                                              
  2 travel                                                                                                              
  3 other                                                                                                               
                                                                                                                        
  [a] accept  [r] relabel  [x] reject  [s] skip  [n] note  [Q] queues  [:] palette  [t] stats  [?] help                 
                                                                                                                        
"
`;

exports[`chrome — status bar + action footer review chrome renders on 16-color (no fg styling) 1`] = `
"                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Lunch at Zomato Bangalore                                                                                        │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  │ Uber ride to airport                                                                                                
  │ Amazon order #12345                                                                                                 
  │ Netflix monthly                                                                                                     
  │ Salary credit October                                                                                               
                                                                                                                        
  src llm:gpt-4   →   food  (92%)                                                                                       
                                                                                                                        
  1 food >                                                                                                              
  2 travel                                                                                                              
  3 other                                                                                                               
                                                                                                                        
  [a] accept  [r] relabel  [x] reject  [s] skip  [n] note  [Q] queues  [:] palette  [t] stats  [?] help                 
                                                                                                                        
"
`;

exports[`chrome — status bar + action footer review chrome renders on mono 1`] = `
"                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Lunch at Zomato Bangalore                                                                                        │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  │ Uber ride to airport                                                                                                
  │ Amazon order #12345                                                                                                 
  │ Netflix monthly                                                                                                     
  │ Salary credit October                                                                                               
                                                                                                                        
  src llm:gpt-4   →   food  (92%)                                                                                       
                                                                                                                        
  1 food >                                                                                                              
  2 travel                                                                                                              
  3 other                                                                                                               
                                                                                                                        
  [a] accept  [r] relabel  [x] reject  [s] skip  [n] note  [Q] queues  [:] palette  [t] stats  [?] help                 
                                                                                                                        
"
`;
